--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ accelerate>=0.25.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
 sentencepiece>=0.1.99
+
+# Testing dependencies
+pytest>=7.4.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.1
+pytest-asyncio>=0.21.1
