chore: Create separate requirement files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-streamlit>=1.24.0
-PyMuPDF>=1.21.1
-ebooklib>=0.18.0
-beautifulsoup4>=4.12.0
-python-docx>=0.8.11
-transformers>=4.36.0
-torch>=2.1.0
-accelerate>=0.25.0
-python-dotenv>=1.0.0
-pydantic>=2.0.0
-sentencepiece>=0.1.99
-
-# Testing dependencies
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.1
-pytest-asyncio>=0.21.1
+fastapi==0.104.1
+streamlit==1.31.1
+transformers==4.35.2
+python-dotenv==1.0.0
+pymupdf==1.23.7
+ebooklib==0.18
+beautifulsoup4==4.12.2
