--- a/requirements-cpu.txt
+++ b/requirements-cpu.txt
@@ -1,4 +1,4 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.1.2+cpu
+torch==2.1.2+cpu  # Required for optimal quantization support
 torchvision==0.16.2+cpu
 torchaudio==2.1.2+cpu
