--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ bitsandbytes==0.39.0  # Required for 4-bit quantization
 psutil==5.9.0  # For memory monitoring
 pytest==8.2.0  # For testing
 pytest-mock==3.12.0  # For mocking in tests
+python-docx==1.1.0  # For Word document generation
+reportlab==4.1.0    # For PDF generation
