Fix: Correct generate_essay error handling and update tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
 # Byte-compiled / optimized / DLL files
+cache/
+model_cache/
 __pycache__/
+.pytest_cache/
 *.py[cod]
 *$py.class
+
+# IDE files
+.idea/
+
+# Virtual Environment
+.venv/
+
+# OS specific
+*.pyc
+*.pyo
+*.pyd
+*~
 
 # C extensions
 *.so
@@ -169,3 +184,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# windsurf rules
+.windsurfrules
