--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 --extra-index-url https://test.pypi.org/simple/
+# Core dependencies
 fastapi==0.104.1
 streamlit==1.31.1
 transformers==4.35.2
@@ -15,3 +16,4 @@ pytest==8.2.0  # For testing
 pytest-mock==3.12.0  # For mocking in tests
 python-docx==1.1.0  # For Word document generation
 reportlab==4.1.0    # For PDF generation
+sentencepiece
