--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -28,10 +28,48 @@ COPY requirements.txt requirements.txt
 RUN pip3 install --no-cache-dir torch==2.1.2+cu118 torchvision==0.16.2+cu118 torchaudio==2.1.2+cu118 -f https://download.pytorch.org/whl/torch_stable.html \
     && pip3 install --no-cache-dir -r requirements.txt
 
+# Create a script to check for GPU availability
+COPY <<EOF /app/check_gpu.py
+import torch
+import sys
+
+def check_gpu():
+    print("Checking GPU availability...")
+    if not torch.cuda.is_available():
+        print("ERROR: CUDA is not available! This container requires NVIDIA GPU support.")
+        print("Please ensure:")
+        print("1. You have an NVIDIA GPU installed")
+        print("2. You have installed the NVIDIA drivers")
+        print("3. You have the nvidia-container-toolkit installed")
+        print("4. You used '--gpus all' when running this container")
+        print("\nFalling back to CPU mode, but performance will be significantly degraded.")
+        return False
+    else:
+        gpu_name = torch.cuda.get_device_name(0)
+        gpu_count = torch.cuda.device_count()
+        print(f"✓ GPU is available! Found {gpu_count} device(s)")
+        print(f"✓ Using: {gpu_name}")
+        return True
+
+if __name__ == "__main__":
+    success = check_gpu()
+    if not success and "--require-gpu" in sys.argv:
+        sys.exit(1)
+EOF
+
 # Copy the rest of the project
 COPY . .
+
+# Create startup wrapper script
+COPY <<EOF /app/start.sh
+#!/bin/bash
+python3 /app/check_gpu.py || echo "WARNING: Continuing without GPU acceleration. Performance will be degraded."
+exec streamlit run src/book_to_essay/streamlit_app.py
+EOF
+
+RUN chmod +x /app/start.sh
 
 # Expose Streamlit port
 EXPOSE 8501
 
-CMD ["streamlit", "run", "src/book_to_essay/streamlit_app.py"]
+CMD ["/app/start.sh"]
