--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,11 @@ cython_debug/
 
 # windsurf rules
 .windsurfrules
+
+# Windows specific files
+*:Zone.Identifier
+*Zone.Identifier
+
+# Project specific
+archive.7z
+exclude.txt
