--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ nltk==3.8.1  # Added for sentence tokenization
 psutil==5.9.0  # For memory monitoring
 pytest==8.2.0  # For testing
 pytest-mock==3.12.0  # For mocking in tests
+pytest-cov==5.0.0    # For code coverage
 python-docx==1.1.0  # For Word document generation
 reportlab==4.1.0    # For PDF generation
 sentencepiece
