docs: update .env.example to remove PROJECT_ROOT and clarify cache envs are set via compose

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ HUGGINGFACE_TOKEN=your_huggingface_token_here
 DEBUG=False
 MAX_UPLOAD_SIZE_MB=50
 MAX_TOKENS=4000
+
+# Notes:
+# - Docker Compose sets cache-related env vars (HF_HOME, TRANSFORMERS_CACHE, HUGGINGFACE_HUB_CACHE, TORCH_HOME, CACHE_DIR)
+#   via the compose file; you do not need to define them here.
+# - HUGGINGFACE_TOKEN is required for gated models and to avoid rate limits.
